--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -32,6 +32,7 @@ main {
 
 .section{
   padding: 70px 0;
+  border-top: 1px solid #ccc;
 }
 
 .container {
@@ -147,6 +148,37 @@ main {
   background-color:hotpink;
   color: #fff
 }
+
+.container .profile-data.hide{
+  display: none;
+}
+
+/* EVENTS */
+.container .profile-data .events ul{
+  display: flex;
+  flex-wrap: wrap;
+  text-align: left;
+}
+
+.container .profile-data .events h2{
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.container .profile-data .events ul li {
+  width: 100%;  
+  margin: 5px 0;
+}
+
+.container .profile-data .events ul li strong{
+  font-weight: 700;
+}
+
+.container .profile-data .events ul li h4,
+.container .profile-data .events ul li p{
+  margin-bottom: 10px;
+}
+
 
 .container .profile-data.hide{
   display: none;
