--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -38,7 +38,7 @@ main {
 .container {
   width: 60%; /* se for uma tela menor que 980px vai se adaptar a 70% */
   max-width: 960px; /* quando chegar em 980px para de aumentar */
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 25px 50px -12px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   background-color: #fff;
   display: flex;
   flex-direction: column;
@@ -122,6 +122,35 @@ main {
   line-height: 23px;
 }
 
+.container .profile-data .counters{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-top: 70px;
+  margin-bottom: 20px;  
+}
+
+.container .profile-data .counters h4{
+  margin-bottom: 30px;
+}
+
+.container .profile-data .counters span{
+  color: white;
+  padding: 15px;
+  border-radius: 50%;
+  font-weight: 700;
+  display: block;
+}
+
+.container .profile-data .counters .followers span{
+  background-color: hotpink;
+}
+
+.container .profile-data .counters .following span{
+  background-color: purple;
+}
+
 /* REPOSITORIES */
 
 .container .profile-data .repositories h2{
@@ -133,6 +162,7 @@ main {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  text-align: left;
 }
 
 .container .profile-data .repositories ul li a{
@@ -145,12 +175,23 @@ main {
 }
 
 .container .profile-data .repositories ul li a:hover{
-  background-color:hotpink;
+  background-color:rgb(171, 180, 240);
   color: #fff
 }
 
-.container .profile-data.hide{
-  display: none;
+.container .profile-data .repositories ul li a h4{
+  font-weight: 700;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+
+.container .profile-data .repositories ul li a i{
+  display: inline-block;
+  font-style: normal;
+  padding: 5px;
+  background-color: slateblue;
+  color: white;
+  border-radius: 5px;  
 }
 
 /* EVENTS */
